--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"@angular/forms": "2.1.2",
 		"@angular/http": "2.1.2",
 		"@angular/platform-browser": "2.1.2",
+		"@angular/platform-browser-dynamic": "2.1.2",
 		"@angular/upgrade": "2.1.2",
 		"@angular/router": "3.1.2",
 		"bootstrap": "3.3.7",
@@ -45,7 +46,8 @@
 		"jquery": "2.2.4",
 		"ng2-charts": "1.4.1",
 		"toastr": "2.1.2",
-		"chart.js": "2.3.0"
+		"chart.js": "2.3.0",
+		"nprogress": "0.2.0"
 	},
 	"devDependencies": {
 		"@angular/compiler-cli": "2.1.2",
@@ -55,6 +57,7 @@
 		"@types/node": "6.0.46",
 		"@types/jquery": "2.0.34",
 		"@types/toastr": "2.1.30",
+		"@types/nprogress": "0.0.29",
 		"copy-webpack-plugin": "4.0.0",
 		"css-loader": "0.25.0",
 		"extract-text-webpack-plugin": "2.0.0-beta.4",
